--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>麒麟舞</title>
+
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/header.css"> 
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
     <div class="Banner">
         <ul>
-            <li class="left"><button class="left_button">麒麟舞数字文化</button></li>
+            <li class="left">
+                <button class="left_button" onclick="scrollToSection('0')">麒麟舞数字文化</button>
+            </li>
+
             <li class="right">
-                <button class="right_button">企业服务</button>
-                <button class="right_button">大众教学</button>
-                <button class="right_button">文创产品</button>
+                <button class="right_button" onclick="scrollToSection('1')">企业服务</button>
+                <button class="right_button" onclick="scrollToSection('2')">大众教学</button>
+                <button class="right_button" onclick="scrollToSection('3')">文创产品</button>
             </li>
         </ul>
     </div>
@@ -25,7 +33,9 @@
     <section class="Header" id="0">
         <div class="Layer">
             <div class="Title">传统文化的数字化革新</div>
+
             <p>运用AIGC技术，让麒麟舞焕发新生</p>
+
             <div>
                 <button class="Start">开始体验</button>
                 <button class="More">了解更多</button>
@@ -34,20 +44,150 @@
     </section>
 
     <section class="Main">
-        <section class="Enterprise">
+        <section class="Enterprise" id="1">
+            <h2>企业服务</h2>
 
+            <div class="Service">
+                <div class="Upload">
+                    <div class="Icon">
+                        <img src="./img/upload.png" alt="上传">
+                    </div>
+                    <h3>武术图谱上传</h3>
+                    <p>企业可以上传自身的武术图谱，我们提供专业的数字化转换服务。</p>
+                </div>
+
+                <div class="Modeling">
+                    <div class="Icon">
+                        <img src="./img/shapes.png" alt="模型">
+                    </div>
+                    <h3>3D模型转换</h3>
+                    <p>通过先进的AI技术，将2D图像转换为精确的3D模型和动画序列。</p>
+                </div>
+
+                <div class="Cooperation">
+                    <div class="Icon">
+                        <img src="./img/building-2.png" alt="合作">
+                    </div>
+                    <h3>长期合作</h3>
+                    <p>提供持续的技术支持和更新，建立稳定的合作关系。</p>
+                </div>
+            </div>
+
+            <button>联系我们</button>
         </section>
-        <section class="Community">
 
+        <section class="Community" id="2">
+            <h2>大众教学</h2>
+
+            <div class="Turtorial">
+                <img src="./img/ski.avif" class="Ski" alt="示例图片">
+
+                <div class="Features">
+                    <div class="Feature">
+                        <div class="Icon">
+                            <img src="./img/graduation-cap.png" alt="智能教学">
+                        </div>
+                        <div class="AIT">
+                            <h3>智能AI教学</h3>
+                            <p>通过AI技术提供个性化的麒麟舞教学体验，适应不同水平的学习者需求。</p>
+                        </div>
+                    </div>
+
+                    <div class="Feature">
+                        <div class="Icon">
+                            <img src="./img/message-square.png" alt="智能问答">
+                        </div>
+                        <div class="AIA">
+                            <h3>智能问答</h3>
+                            <p>随时解答学习过程中的疑问，提供专业的指导和建议。</p>
+                        </div>
+                    </div>
+
+                    <div class="Feature">
+                        <div class="Icon">
+                            <img src="./img/video.png" alt="动作预览">
+                        </div>
+                        <div class="PRE">
+                            <h3>3D动作预览</h3>
+                            <p>通过3D模型展示标准动作，帮助学习者更好地理解和掌握动作要领。</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button>开始学习</button>
         </section>
-        <section class="Products">
 
+        <section class="Merchandise" id="3">
+            <h2>文创产品</h2>
+
+            <div class="Goods">
+                <div class="Good">
+                    <div class="Pic">
+                        <img src="./img/product01.avif" alt="限定文化衫">
+                    </div>
+
+                    <div class="Descryption">
+                        <h4>限定文化衫</h4>
+                        <h6>¥199</h6>
+                    </div>
+                </div>
+
+                <div class="Good">
+                    <div class="Pic">
+                        <img src="./img/product02.avif" alt="艺术挂画">
+                    </div>
+
+                    <div class="Descryption">
+                        <h4>艺术挂画</h4>
+                        <h6>¥299</h6>
+                    </div>
+                </div>
+
+                <div class="Good">
+                    <div class="Pic">
+                        <img src="./img/product03.avif" alt="传统配饰">
+                    </div>
+
+                    <div class="Descryption">
+                        <h4>传统配饰</h4>
+                        <h6>¥159</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="Contacts">
+                <div class="Contact">
+                    <div class="Icon">
+                        <img src="./img/store.png">
+                    </div>
+                    <h3>官方旗舰店</h3>
+                    <p>线下实体店体验</p>
+                </div>
+
+                <div class="Contact">
+                    <div class="Icon">
+                        <img src="./img/shopping-bag.png">
+                    </div>
+                    <h3>网上商城</h3>
+                    <p>便捷的线上购物体验</p>
+                </div>
+
+                <div class="Contact">
+                    <div class="Icon">
+                        <img src="./img/share-2.png">
+                    </div>
+                    <h3>社交媒体</h3>
+                    <p>关注我们的最新动态</p>
+                </div>
+            </div>
         </section>
     </section>
 
-    <section class="Rooter">
+    <footer class="Rooter">
 
-    </section>
+    </footer>
+
     <script type="text/JavaScript" src="./script/index.js"></script>
 </body>
 
