--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="Contacts">
                 <div class="Contact">
                     <div class="Icon">
-                        <img src="./img/store.png">
+                        <img src="./img/store.png" alt="商店">
                     </div>
                     <h3>官方旗舰店</h3>
                     <p>线下实体店体验</p>
@@ -167,7 +167,7 @@
 
                 <div class="Contact">
                     <div class="Icon">
-                        <img src="./img/shopping-bag.png">
+                        <img src="./img/shopping-bag.png" alt="购物">
                     </div>
                     <h3>网上商城</h3>
                     <p>便捷的线上购物体验</p>
@@ -175,7 +175,7 @@
 
                 <div class="Contact">
                     <div class="Icon">
-                        <img src="./img/share-2.png">
+                        <img src="./img/share-2.png" alt="分享">
                     </div>
                     <h3>社交媒体</h3>
                     <p>关注我们的最新动态</p>
@@ -184,8 +184,36 @@
         </section>
     </section>
 
-    <footer class="Rooter">
+    <footer>
+        <div class="Container">
+            <div class="Infomations">
+                <div class="Contact">
+                    <h3>联系我们</h3>
+                    <div class="Mail">
+                        <img src="./img/mail.png" alt="邮箱">
+                        <span>contact&#64qilinwu.com</span>
+                    </div>
+                    <div class="Phone">
+                        <img src="./img/phone.png" alt="电话">
+                        <span>+86 123 4567 8900</span>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="Link">
+                <h3>快速链接</h3>
+                <button onclick="scrollToSection('1')">企业服务</button>
+                <button onclick="scrollToSection('2')">大众教学</button>
+                <button onclick="scrollToSection('3')">文创商店</button>
+            </div>
+    
+            <div class="Subscription">
+                <h3>关注我们</h3>
+                <span>获取最新的麒麟舞文化资讯和教学动态</span>
+            </div>
+        </div>
 
+        <p>© 2024 麒麟舞数字文化. All rights reserved.</p>
     </footer>
 
     <script type="text/JavaScript" src="./script/index.js"></script>
