--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <p>运用AIGC技术，让麒麟舞焕发新生</p>
 
             <div>
-                <button class="Start">开始体验</button>
-                <button class="More">了解更多</button>
+                <button class="Start" onclick="scrollToSection('1')">开始体验</button>
+                <button class="More" onclick="scrollToSection('2')">了解更多</button>
             </div>
         </div>
     </section>
